# django

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  environment.json  manage.py  pyproject.toml
airflow/dags/: test_dag.py
ansible/group_vars/all/: vars.yml
ansible/group_vars/develop/: vault.yml
ansible/group_vars/production/: vault.yml
ansible/group_vars/qa/: vars.yml  vault.yml
ansible/roles/ansible-role-django/templates/: airflow.cfg.j2  django.supervisor.conf.j2
config/: core_settings.py  settings.py  urls.py
config/debug/: routing.py
config/settings/: base.py  local.py
