[tool.poetry]
name = "djfullapp"
version = "0.1.0"
description = "Imagen de Django 2.2.13 con Nginx y Apache Airflow."

license = "Apache-2.0"

authors = [
    "Saúl Galán <saengate@gmail.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/saengate/django"
homepage = "https://github.com/saengate/django"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
# https://python-poetry.org/docs/dependency-specification/
python = "~3.7"
Django = "^3.0"
djangorestframework = "^3.10"
djangotoolbox = "^1.8"
nose = "^1.3"
python-dateutil = "^2.8"
requests = "^2.22"
urllib3 = "^1.25"
pandas = "^0.23"
daphne = "^2.5"
gunicorn = "^19.10"
gevent = "^1.4"
redis = "^3.2"
django-watchman = "^0.18"
asgiref = "^3.2"
channels = "^2.4"
channels_redis = "^3.0"
psycopg2 = "^2.8"
celery = "^4.4"
apache-airflow = { version = "^1.10", extras = [ "postgres", "celery", "redis", "crypto" ] }
django_neomodel = "*"
termcolor = "^1.1"
django-easy-audit = "^1.3"
django-extensions = "^3.0"

[tool.poetry.dev-dependencies]
notebook = "^6.1"
autopep8 = "^1.5"
flake8 = "^3.8"
flake8-commas = "^2.0"
ipython = "^7.17"
ipykernel = "^5.3"
ipywidgets = "^7.5"
jedi = "^0.17"
jupyter = "^1.0"
jupyter-client = "^6.1"
jupyter-console = "^6.1"
jupyter-core = "^4.6"
qtconsole = "^4.7"
widgetsnbextension = "^3.5"
